--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Flappy Bird</title>
-    <link rel="stylesheet" href="css/estilo.css">
-    <link rel="stylesheet" href="css/flappy.css">
+    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="/css/flappy.css">
 </head>
 
 <body class="conteudo">
     <button onclick="iniciar()">Iniciar</button>
     <h1>Flappy Bird</h1>
     <div wm-flappy>    </div>
-    <script src="js/flappy.js"></script>
+    <script src="/js/flappy.js"></script>
 </body>
 
 </html>
